--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">AbsensiApp</string>
+
+    <string name="login">Masuk</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="emptyEmail">Email Tidak Boleh Kosong</string>
+    <string name="invalid_password">Password Minimal 8 Karakter</string>
+    <string name="failedLogin">Pastikan Email dan Password Sudah Benar</string>
+
+    <string name="absent">Absen</string>
+    <string name="refreshSuccess">Berhasil Diperbarui</string>
+
+    <string name="logout">Logout</string>
+    <string name="messageLogout">Logout Success</string>
+
+    <string name="name">Nama</string>
+    <string name="id">ID</string>
+
+    <string name="closeWarning">Tekan lagi untuk keluar</string>
+    <string name="dialogRelog">Sesi login Anda telah berakhir. Silakan login kembali.</string>
+    <string name="failure">Tidak dapat terhubung dengan Server</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="navigate">Navigasi</string>
+
 </resources>
